examples/test/testpolicy5728.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5728
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key35: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value47
          key25: value22
          key22: value11
      podSelector:
        matchLabels:
          key28: value23
          key20: value30
